# undirbuningur_stae

./: .dockerignore  .git-ftp-include  .gitignore  Dockerfile  README.md  cli.py  conf.py  pyproject.toml  requirements.txt  scripts.sh
.deployment/: Dockerfile.local  main.py  run_web.sh  test.py
.deployment/nginx/: nginx.conf.template
.deployment/reload-config/: reload.conf
.github/: dependabot.yml
.github/actions/build-project/: action.yml  scripts.sh
.github/actions/deploy/: action.yml
.github/actions/edbook/: build-project.yml  check-changes.yml
.github/actions/modified/: action.yml
.github/workflows/: feature.yml  main.yml
cli/: README.md  cli.py  main.py  server.py
docker/: docker-compose.yml
docker/nginx/: nginx.conf.template
docs/: LIST_OF_HOVER_TERMS  conf.py  index.rst
docs/_extensions/custom-button/custom_button/custom_button/: button.py
docs/_templates/: layout.html
hi-cli/: README.md  pyproject.toml
hi-cli/hi_cli/: cli.py  server.py  utils.py
hicli/: README.md  main.py
nginx/: nginx.conf.template
projects/analysis_1/: Makefile  conf.py
projects/foundation/: Makefile  conf.py  index.rst
