[tool.poetry]
name = "hi-cli"
version = "0.1.0"
description = ""
authors = ["Jón Levy <nonni@nonni.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
seedir = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.6.0"

[tool.poetry.scripts]
hicli = "hi_cli.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
