[tool.poetry]
name = "hi-cli"
version = "0.1.0"
description = ""
authors = ["Jón Levy <nonni@nonni.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
seedir = "^0.1.2"
pypandoc = "^1.5"
Sphinx= "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
sphinxcontrib-katex = "^0.6.1"
paramiko= "^2.7.2"
panoptoextension = {path = "../panoptoextension", develop = true}
sagecell = {path = "../sagecell-extension", develop = true}
ggbextension = {path = "../ggbextension", develop = true}
scrolldepthextension = {path = "../SphinxScrolldepth", develop = true}
hoverroleextension = {path = "../hoverrole", develop = true}
toggleblock = {path = "../toggleblock-extension", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.6.0"

[tool.poetry.scripts]
hicli = "hi_cli.cli:app"

# [tool.semantic_release]
# version_variable = [
#     "hi-cli/pyproject.toml:version"
# ]
# branch = "master"
# upload_to_pypi = false
# upload_to_release = true
# build_command = "pip install poetry && poetry build"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
